--- a/packages/camera/camera/example/web/index.html
+++ b/packages/camera/camera/example/web/index.html
@@ -3,8 +3,9 @@
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file. -->
 <html>
-
 <head>
+  <base href="$FLUTTER_BASE_HREF">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="An example of the camera on the web.">
@@ -16,14 +17,12 @@ found in the LICENSE file. -->
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>Camera Web Example</title>
   <link rel="manifest" href="manifest.json">
 </head>
-
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
-
 </html>
